src/objects/OOH_DAVE__c.object
<CustomObject>
    <fields>
        <fullName>OOH_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denmark</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portugal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OOH_POSbuyingSKU__c</fullName>
        <label>POS buying SKU</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOH_PYPOSFiltered__c</fullName>
        <label>PY POS Filtered</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOH_PYPOSTotal__c</fullName>
        <label>PY POS Total</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OOH_SKUDISTIBUITONPYPOSFiltered__c</fullName>
        <label>SKU DISTIBUITON / PY POS Filtered</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OOH_SKUDISTIBUITONYTDPOSFull__c</fullName>
        <label>SKU DISTIBUITON / YTD POS Full</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OOH_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>IS Universe L13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCPG Universe L13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IC Universe L13</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OOH_VanguardL13Code__c</fullName>
        <label>Vanguard L13 Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOH_VanguardL13Name__c</fullName>
        <label>Vanguard L13 Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OOH_YTDPOSFull__c</fullName>
        <label>YTD POS Full</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DAVE</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OOH_Country__c</columns>
        <columns>OOH_Type__c</columns>
        <columns>OOH_PYPOSTotal__c</columns>
        <columns>OOH_VanguardL13Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DAVE - {00000000}</displayFormat>
        <label>DAVE Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DAVE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>